err/watson-cors.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-1.6.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/watson'...
Listing './lib/python3.5/site-packages/watson/cache'...
Listing './lib/python3.5/site-packages/watson/common'...
Listing './lib/python3.5/site-packages/watson/console'...
Listing './lib/python3.5/site-packages/watson/cors'...
Listing './lib/python3.5/site-packages/watson/dev'...
Listing './lib/python3.5/site-packages/watson/di'...
Listing './lib/python3.5/site-packages/watson/events'...
Listing './lib/python3.5/site-packages/watson/filters'...
Listing './lib/python3.5/site-packages/watson/form'...
Listing './lib/python3.5/site-packages/watson/framework'...
Listing './lib/python3.5/site-packages/watson/framework/debug'...
Listing './lib/python3.5/site-packages/watson/framework/debug/panels'...
Listing './lib/python3.5/site-packages/watson/framework/debug/views'...
Listing './lib/python3.5/site-packages/watson/framework/debug/views/debug'...
Listing './lib/python3.5/site-packages/watson/framework/debug/views/debug/panels'...
Listing './lib/python3.5/site-packages/watson/framework/i18n'...
Listing './lib/python3.5/site-packages/watson/framework/i18n/locales'...
Listing './lib/python3.5/site-packages/watson/framework/logging'...
Listing './lib/python3.5/site-packages/watson/framework/mail'...
Listing './lib/python3.5/site-packages/watson/framework/support'...
Listing './lib/python3.5/site-packages/watson/framework/support/console'...
Listing './lib/python3.5/site-packages/watson/framework/support/console/commands'...
Listing './lib/python3.5/site-packages/watson/framework/support/jinja2'...
Listing './lib/python3.5/site-packages/watson/framework/views'...
Listing './lib/python3.5/site-packages/watson/framework/views/renderers'...
Listing './lib/python3.5/site-packages/watson/framework/views/templates'...
Listing './lib/python3.5/site-packages/watson/framework/views/templates/html'...
Listing './lib/python3.5/site-packages/watson/framework/views/templates/html/_includes'...
Listing './lib/python3.5/site-packages/watson/framework/views/templates/html/errors'...
Listing './lib/python3.5/site-packages/watson/framework/views/templates/html/watson'...
Listing './lib/python3.5/site-packages/watson/html'...
Listing './lib/python3.5/site-packages/watson/http'...
Listing './lib/python3.5/site-packages/watson/http/sessions'...
Listing './lib/python3.5/site-packages/watson/mail'...
Listing './lib/python3.5/site-packages/watson/mail/backends'...
Listing './lib/python3.5/site-packages/watson/routing'...
Listing './lib/python3.5/site-packages/watson/validators'...
Listing './lib/python3.5/site-packages/watson_cache-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/watson_common-1.6.2.dist-info'...
Listing './lib/python3.5/site-packages/watson_console-2.0.2.egg-info'...
Listing './lib/python3.5/site-packages/watson_cors-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/watson_dev-3.0.1.dist-info'...
Listing './lib/python3.5/site-packages/watson_di-2.2.3.dist-info'...
Listing './lib/python3.5/site-packages/watson_events-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/watson_filters-1.0.1.dist-info'...
Listing './lib/python3.5/site-packages/watson_form-4.1.4.dist-info'...
Listing './lib/python3.5/site-packages/watson_framework-3.5.2.dist-info'...
Listing './lib/python3.5/site-packages/watson_html-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/watson_http-1.2.5.dist-info'...
Listing './lib/python3.5/site-packages/watson_mail-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/watson_routing-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/watson_validators-1.0.6.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
